variables.Variables.scala.error
Compilation error:
Variables:1: error: ';' expected but '=' found.
step:int = 0
         ^