variables.Variables.scala.code
step:int = 0
while (! isOverBaggle()) 
{
  forward()
  step = step + 1
}
pickUpBaggle()
while (doneStep != step )
{backward()
doneStep = doneStep + 1}
dropBaggle()